Rename modules (with EntityManager bug)

--- a/karaf-rest-service-core/karaf-rest-features/pom.xml
+++ b/karaf-rest-service-core/karaf-rest-features/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <artifactId>karaf-rest-features</artifactId>
-    <name>Apache Karaf :: REST :: Features</name>
+    <name>Weather Fetcher :: Features</name>
 
     <build>
         <resources>
