--- a/karaf-rest-service-core/karaf-rest-persistence/weather-fetcher-repository/pom.xml
+++ b/karaf-rest-service-core/karaf-rest-persistence/weather-fetcher-repository/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <artifactId>weather-fetcher-repository</artifactId>
-    <name>Apache Karaf :: Persistence :: Repository</name>
+    <name>Weather Fetcher :: Persistence :: Repository</name>
     <packaging>bundle</packaging>
 
     <dependencies>
