--- a/karaf-rest-service-core/karaf-rest-api/pom.xml
+++ b/karaf-rest-service-core/karaf-rest-api/pom.xml
@@ -10,8 +10,8 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>karaf-rest-api</artifactId>
-    <name>Apache Karaf :: REST :: API</name>
+    <artifactId>weather-fetcher-api</artifactId>
+    <name>Weather Fetcher :: API</name>
     <packaging>bundle</packaging>
 
     <dependencies>
