--- a/weather-fetcher/pom.xml
+++ b/weather-fetcher/pom.xml
@@ -4,11 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.weather</groupId>
+    <groupId>org.weather</groupId>
     <artifactId>weather-fetcher</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-
     <modules>
         <module>weather-fetcher-api</module>
         <module>weather-fetcher-persistence</module>
