--- a/weather-fetcher/weather-fetcher-api/pom.xml
+++ b/weather-fetcher/weather-fetcher-api/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>weather-fetcher</artifactId>
-        <groupId>com.weather</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <groupId>org.weather</groupId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -23,11 +23,11 @@
             <artifactId>cxf-rt-rs-client</artifactId>
             <version>${cxf.version}</version>
         </dependency>
-        <dependency>
-            <groupId>com.weather</groupId>
-            <artifactId>weather-fetcher-repository</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.weather</groupId>-->
+<!--            <artifactId>weather-fetcher-repo</artifactId>-->
+<!--            <version>${project.version}</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
@@ -49,7 +49,7 @@
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
-                        <Export-Package>com.weather.fetcher.api.*</Export-Package>
+                        <Export-Package>org.weather.fetcher.api.*</Export-Package>
                         <Import-Package>
                             *
                         </Import-Package>
