--- a/weather-fetcher/weather-fetcher-persistence/pom.xml
+++ b/weather-fetcher/weather-fetcher-persistence/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>weather-fetcher</artifactId>
-        <groupId>com.weather</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <groupId>org.weather</groupId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -14,7 +14,7 @@
 
     <modules>
         <module>weather-fetcher-datasource</module>
-        <module>weather-fetcher-repository</module>
+        <module>weather-fetcher-repo</module>
     </modules>
 
     <dependencies>
