--- a/weather-fetcher/weather-fetcher-persistence/weather-fetcher-datasource/pom.xml
+++ b/weather-fetcher/weather-fetcher-persistence/weather-fetcher-datasource/pom.xml
@@ -11,6 +11,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>weather-fetcher-datasource</artifactId>
+    <name>Weather fetcher :: Persistence :: Datasource</name>
     <packaging>bundle</packaging>
 
 </project>
