--- a/weather-fetcher/pom.xml
+++ b/weather-fetcher/pom.xml
@@ -31,13 +31,15 @@
         <mariadb-java-client.version>3.0.8</mariadb-java-client.version>
         <hibernate-jpa-2.1-api.version>1.0.2.Final</hibernate-jpa-2.1-api.version>
         <cxf.version>3.5.3</cxf.version>
+        <lombok.version>1.18.24</lombok.version>
+        <jackson.version>2.13.4</jackson.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.24</version>
+            <version>${lombok.version}</version>
         </dependency>
     </dependencies>
 
