--- a/weather-fetcher/weather-fetcher-api/pom.xml
+++ b/weather-fetcher/weather-fetcher-api/pom.xml
@@ -32,12 +32,12 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.13.4</version>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.jaxrs</groupId>
             <artifactId>jackson-jaxrs-json-provider</artifactId>
-            <version>2.13.4</version>
+            <version>${jackson.version}</version>
         </dependency>
     </dependencies>
 
