--- a/wf-core-services/pom.xml
+++ b/wf-core-services/pom.xml
@@ -2,32 +2,34 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.1.3</version>
         <relativePath/>
     </parent>
-
-    <groupId>com.core.service</groupId>
+    <groupId>com.example</groupId>
     <artifactId>wf-core-services</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>Weather fetcher :: Core :: Services</name>
-
+    <name>wf-core-services</name>
+    <description>wf-core-services</description>
     <properties>
+        <java.version>17</java.version>
         <openfeign.version>4.0.4</openfeign.version>
         <apache.cxf.version>4.0.2</apache.cxf.version>
+        <mariadb.version>2.0.1</mariadb.version>
         <jackson-jaxrs.version>1.9.13</jackson-jaxrs.version>
-        <java.version>11</java.version>
-        <mariadb.version>3.4.0</mariadb.version>
     </properties>
-
     <dependencies>
         <dependency>
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-spring-boot-starter-jaxrs</artifactId>
             <version>${apache.cxf.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>${mariadb.version}</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -49,9 +51,9 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.mariadb.jdbc</groupId>
-            <artifactId>mariadb-java-client</artifactId>
-            <version>${mariadb.version}</version>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-jaxrs</artifactId>
+            <version>${jackson-jaxrs.version}</version>
         </dependency>
     </dependencies>
 
